force-app/main/default/objects/OpportunityLineItem/fields/Annual_Recurring_Product__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[CDD NE Wave 1] Indicates whether the product is renewed annually.</description>
    <label>Annual Recurring Product</label>
    <type>Checkbox</type>
</CustomField>