force-app/main/default/objects/OpportunityLineItem/fields/Consumable_Flagged_Product__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Flagged_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This controls logic in rollups, email alerts and other parts of the system. Updated via WFR.</description>
    <label>Consumable-Flagged Product</label>
    <type>Checkbox</type>
</CustomField>