force-app/main/default/objects/OpportunityLineItem/fields/Current_Volume_Annual__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume_Annual__c</fullName>
    <label>Current Volume (Annual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>