force-app/main/default/objects/OpportunityLineItem/fields/Equipment_product__c.field-meta.xml
<CustomField>
    <fullName>Equipment_product__c</fullName>
    <label>Equipment product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>