force-app/main/default/objects/OpportunityLineItem/fields/Lost_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Lost_Sales_Price__c</fullName>
    <description>[CDD NE Wave 1] Copy of the sales price, as a record for lost products.</description>
    <label>Lost Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>