force-app/main/default/objects/OpportunityLineItem/fields/Lost_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Lost_Total_Price__c</fullName>
    <description>[CDD NE Wave 1] Total amount of products that are lost.</description>
    <formula>IF(Discount &gt; 0,((Lost_Sales_Price__c * Quantity) * (1-Discount)),Lost_Sales_Price__c * Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>