force-app/main/default/objects/OpportunityLineItem/fields/Product_Annual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Annual_Quantity__c</fullName>
    <label>Product Annual Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>