force-app/main/default/objects/OpportunityLineItem/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <description>this is not on any layout and editable by any profile</description>
    <inlineHelpText>Synced from the related Product2 record via Workflow Rule.</inlineHelpText>
    <label>Product Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>