force-app/main/default/objects/OpportunityLineItem/fields/Product_Hierarchy_Lvl_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy_Lvl_3__c</fullName>
    <label>Product Hierarchy Lvl 3</label>
    <length>25</length>
    <type>Text</type>
</CustomField>