force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Months__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <label># Scheduled MONTHS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>