force-app/main/default/objects/OpportunityLineItem/fields/Variance_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Variance_Calculator__c</fullName>
    <formula>( Product_Annual_Quantity__c * UnitPrice ) - ( Current_Volume_Annual__c * Current_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Calculator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>